feat: adds noise grain background

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,11 +6,48 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  @apply scrollbar-thin scrollbar-thumb-primary-400 scrollbar-track-primary-900;
 }
 
 :root {
   --black: #000;
   --white: #fff;
+}
+
+body {
+  background-color: rgb(24, 24, 23);
+  font-size: 16px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  &:before {
+    z-index: 999;
+    position: fixed;
+    content: '';
+    height: 300%;
+    width: 300%;
+    top: -100%;
+    left: -50%;
+    pointer-events: none;
+    user-select: none;
+    background-image: url('http://momentsingraphics.de/Media/BlueNoise/WhiteNoiseDithering.png');
+    opacity: 0.029;
+    animation: noise 8s steps(10) infinite;
+  }
+}
+
+@keyframes noise {
+  0%, 100% { transform:translate(0, 0); }
+  10% { transform:translate(-5%, -10%); }
+  20% { transform:translate(-15%, 5%); }
+  30% { transform:translate(7%, -25%); }
+  40% { transform:translate(-5%, 25%); }
+  50% { transform:translate(-15%, 10%); }
+  60% { transform:translate(15%, 0%); }
+  70% { transform:translate(0%, 15%); }
+  80% { transform:translate(3%, 35%); }
+  90% { transform:translate(-10%, 10%); }
 }
 
 @font-face {
