--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,7 @@
   padding: 0;
   box-sizing: border-box;
   @apply scrollbar-thin scrollbar-thumb-primary-400 scrollbar-track-primary-900;
+  @apply scroll-smooth;
 }
 
 :root {
