--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -38,7 +38,7 @@ body {
     left: -50%;
     pointer-events: none;
     user-select: none;
-    background-image: url('http://momentsingraphics.de/Media/BlueNoise/WhiteNoiseDithering.png');
+    background-image: url('https://momentsingraphics.de/Media/BlueNoise/WhiteNoiseDithering.png');
     opacity: 0.029;
     animation: noise 8s steps(10) infinite;
   }
